--- a/webapp/src/app/pacman-features/modules/compliance/vulnerabilities-compliance/vulnerabilities-compliance.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/vulnerabilities-compliance/vulnerabilities-compliance.component.html
@@ -14,7 +14,7 @@
 
  <div class="compliance-dashboard-wrapper flex flex-between vulnerabilities-wrapper">
     <div class="floating-widgets-section flex flex-col">
-        <!-- <app-breadcrumb [breadcrumbLinks]="breadcrumbLinks" [breadcrumbArray]="breadcrumbArray" [breadcrumbPresent]="breadcrumbPresent"></app-breadcrumb> -->
+        <div class="padding-top"></div>
         <div class="floating-widgets-header dashboards-header flex flex-between">
             <div>
                 <app-back-navigation [pageTitle]='pageTitle'></app-back-navigation>
