--- a/webapp/src/app/pacman-features/modules/compliance/vulnerabilities/vulnerabilities.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/vulnerabilities/vulnerabilities.component.html
@@ -18,7 +18,7 @@
     </div>
     <div class="floating-widgets-header flex flex-between">
       <div>
-        <img class="arrow-img" *ngIf="backButtonRequired" (click)="navigateBack();" style="height: 1.4em;" src="../assets/icons/left-arrow.svg">
+        <!-- <img class="arrow-img" *ngIf="backButtonRequired" (click)="navigateBack();" style="height: 1.4em;" src="../assets/icons/left-arrow.svg"> -->
           <app-back-navigation></app-back-navigation>
       </div>
       <div class='flex relative z-index'>
